<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.basket.BasketFragment">

    <LinearLayout
        android:id="@+id/basket_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="gone" >

        <ImageView
            android:src="@drawable/ic_common_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/basket_basket_image" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/bucket_is_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_layout_padding"/>

        <TextView
            android:text="@string/basket_try_to_find_something"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/basket_to_catalog"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="16dp"
            android:text="@string/button_in_the_catalog"
            android:textColor="@color/colorLinkButton"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/basket_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.cardview.widget.CardView
            android:id="@+id/basket_header"
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/default_title_padding"
                    android:text="@string/basket_product_list" />

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/basket_remove_all"
                    android:padding="@dimen/default_title_padding"
                    android:src="@drawable/ic_common_delete_all" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/basket_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_basket"
                tools:itemCount="6"/>

            <LinearLayout
                android:id="@+id/favorite_baskets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_sheet_behavior"
                android:orientation="vertical"
                app:behavior_peekHeight="@dimen/default_bottom_sheet_size"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_bottom_sheet_size"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:text="@string/basket_forever_baskets"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="@dimen/default_title_padding"/>

                    <ImageButton
                        android:id="@+id/favorite_baskets_button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:src="@drawable/ic_common_arrow_up"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/default_layout_padding"
                        android:contentDescription="@string/basket_open_button" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/basket_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/default_title_padding"
                android:text="@string/basket_subtotal"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_title_padding"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="2048 р" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?android:attr/colorAccent"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/basket_place_your_order"
            android:textColor="?android:attr/textColorPrimary"
            app:cornerRadius="0dp" />

    </LinearLayout>

</FrameLayout>
