<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/login_loading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginTop="-6dp"
        android:layout_marginBottom="-6dp"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:padding="@dimen/login_padding">



            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:singleSelection="true"
                app:checkedButton="@+id/login_tab"
                app:selectionRequired="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_tab"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:backgroundTint="@drawable/selector_background_login_tabs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_login"
                    app:strokeWidth="0.5dp"
                    android:textColor="?android:attr/textColorPrimary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registration_tab"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:backgroundTint="@drawable/selector_background_login_tabs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_registration"
                    app:strokeWidth="0.5dp"
                    android:textColor="?android:attr/textColorPrimary" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <ImageView
                android:src="@drawable/pepega_food"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/login_logo" />

            <TextView
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/logo_padding"/>

            <LinearLayout
                android:id="@+id/login_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_email_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email"
                    android:layout_marginBottom="@dimen/between_form_space"
                    app:placeholderText="example@example.com"
                    app:errorEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:layout_marginBottom="@dimen/last_form_item"
                    app:placeholderText="@string/login_password_placeholder"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/login_sign_in"
                    android:textColor="?android:attr/textColorPrimary"
                    android:backgroundTint="?android:attr/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:strokeWidth="0.5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/forgot_password"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/login_forgot_password"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/registration_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registration_first_name_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_first_name"
                    android:layout_marginBottom="@dimen/between_form_space"
                    app:placeholderText="@string/login_first_name_placeholder"
                    app:errorEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registration_last_name_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_last_name"
                    android:layout_marginBottom="@dimen/between_form_space"
                    app:placeholderText="@string/login_last_name_placeholder"
                    app:errorEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_user_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registration_email_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email"
                    android:layout_marginBottom="@dimen/between_form_space"
                    app:placeholderText="example@example.com"
                    app:errorEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registration_phone_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_phone"
                    android:layout_marginBottom="@dimen/between_form_space"
                    app:placeholderText="9XX-XXX-XX-XX"
                    app:errorEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registration_password_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:layout_marginBottom="@dimen/between_form_space"
                    app:placeholderText="@string/login_password_placeholder"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registration_confirm_password_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_confirm_password"
                    android:layout_marginBottom="@dimen/last_form_item"
                    app:placeholderText="@string/login_password_placeholder"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registration_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?android:attr/colorAccent"
                    android:text="@string/login_sign_out"
                    app:strokeWidth="0.5dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
