<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <androidx.cardview.widget.CardView
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_layout_padding">

            <TextView
                android:id="@+id/home_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_common_search"
                android:text="@string/search_hint"
                android:gravity="center_vertical"
                android:padding="@dimen/default_title_padding" />

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/home_automatic_collection"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_title_padding"
            android:layout_margin="@dimen/default_layout_padding" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_auto_baskets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_shopping_basket"
            tools:itemCount="3"/>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/home_favorite_baskets"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_title_padding"
            android:layout_margin="@dimen/default_layout_padding" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_favorite_basket"
            tools:itemCount="3"/>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/home_catalog"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_title_padding"
            android:layout_margin="@dimen/default_layout_padding" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_catalog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/item_catalog"
            tools:itemCount="4"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
